--- a/scripts/figures_tables_skirmish.Rmd
+++ b/scripts/figures_tables_skirmish.Rmd
@@ -9,6 +9,7 @@ updated 17May2021 new *in situ* file
 updated 16Jun2021 with output from Google Colab
 updated 28Jun2021 with unimodal analysis
 updated 19Jul2021 to export the scenes that passed QAQC
+updated 11Aug2021 with residuals for azimuth and sun angle, etc
 
 
 
@@ -426,7 +427,7 @@ ggplot(validation_IQR, aes(x = temp_med, y = pred_temp))+
 
 #### predicted v observed 50% cutoff
 ```{r}
-validtion_50 <- validation %>% 
+validtion_50 <- validation_range %>% 
   filter(perc_lake > 50)
 val_mean_ls_50 <- lm(validtion_50$surface_temp_median ~ validtion_50$temp_med)
 summary(val_mean_ls_50)
@@ -453,7 +454,7 @@ ggsave(paste0(figdir, 'deming_reg_median_50perc_v28June2021.jpg'), height = 5, w
 ```
 #### predicted v observed 60% cutoff
 ```{r}
-validtion_60 <- validation %>% 
+validtion_60 <- validation_range %>% 
   filter(perc_lake > 60)
 val_mean_ls_60 <- lm(validtion_60$surface_temp_median ~ validtion_60$temp_med)
 summary(val_mean_ls_60)
@@ -539,24 +540,24 @@ validation_range %>%
 #### plot residuals by x
 
 ```{r}
-lst_insitu_dem_forresid = mcreg(x = validation$temp_med, y = validation$surface_temp_median, method.reg = 'Deming')
+lst_insitu_dem_forresid = mcreg(x = validation_range$temp_med, y = validation_range$surface_temp_median, method.reg = 'Deming')
 
 
-ggplot(validation, aes(sample = opt_resid)) +
+ggplot(validation_range, aes(sample = opt_resid)) +
   geom_qq() +
   geom_qq_line()
 
-ggplot(validation, aes (y = opt_resid, x = temp_med)) +
+ggplot(validation_range, aes (y = opt_resid, x = temp_med)) +
   geom_point() +
-  labs(x = 'in-situ mean water temp (deg C)',
+  labs(x = 'in-situ median water temp (deg C)',
        y = 'deming optimized residuals (deg C)') +
   geom_hline(yintercept = 0, color = 'black') +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_x_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = temp_med, color = month)) +
+ggplot(validation_range, aes (y = opt_resid, x = temp_med, color = month)) +
   geom_point(size = 2) +
-  labs(x = 'in-situ mean water temp (deg C)',
+  labs(x = 'in-situ median water temp (deg C)',
        y = 'deming optimized residuals (deg C)') +
   geom_hline(yintercept = 0, color = 'black') +
   final_theme +
@@ -566,7 +567,7 @@ ggsave(paste0(dir, 'figures/optresid_x_colorbymonth_v28Jun2021.jpg'), height = 5
 
 #### residuals by cloud cover
 ```{r}
-ggplot(validation, aes (y = opt_resid, x = cloud_cover)) +
+ggplot(validation_range, aes (y = opt_resid, x = cloud_cover)) +
   geom_point() +
   labs(x = 'cloud cover (percent)',
        y = 'deming optimized residuals (deg C)') +
@@ -574,7 +575,7 @@ ggplot(validation, aes (y = opt_resid, x = cloud_cover)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_cloudcover_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = cloud_cover, color = month)) +
+ggplot(validation_range, aes (y = opt_resid, x = cloud_cover, color = month)) +
   geom_point(size = 2) +
   labs(x = 'cloud cover (percent)',
        y = 'deming optimized residuals (deg C)') +
@@ -587,7 +588,7 @@ ggsave(paste0(dir, 'figures/optresid_cloudcover_colorbymonth_v28Jun2021.jpg'), h
 
 #### residuals by pixel count
 ```{r}
-ggplot(validation, aes (y = opt_resid, x = pixel_count)) +
+ggplot(validation_range, aes (y = opt_resid, x = pixel_count)) +
   geom_point() +
   labs(x = 'pixel count',
        y = 'deming optimized residuals (deg C)') +
@@ -595,7 +596,7 @@ ggplot(validation, aes (y = opt_resid, x = pixel_count)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_pixelcount_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = pixel_count, color = month)) +
+ggplot(validation_range, aes (y = opt_resid, x = pixel_count, color = month)) +
   geom_point(size = 2) +
   labs(x = 'pixel count',
        y = 'deming optimized residuals (deg C)') +
@@ -608,7 +609,7 @@ ggsave(paste0(dir, 'figures/optresid_pixelcount_colorbymonth_v28Jun2021.jpg'), h
 
 #### residuals by mean sample depth
 ```{r}
-ggplot(validation, aes (y = opt_resid, x = depth_avg)) +
+ggplot(validation_range, aes (y = opt_resid, x = depth_avg)) +
   geom_point() +
   labs(x = 'mean in-situ depth (m)',
        y = 'deming optimized residuals (deg C)') +
@@ -616,7 +617,7 @@ ggplot(validation, aes (y = opt_resid, x = depth_avg)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_insitudepth_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = depth_avg, color = month)) +
+ggplot(validation_range, aes (y = opt_resid, x = depth_avg, color = month)) +
   geom_point(size = 2) +
   labs(x = 'mean in-situ depth (m)',
        y = 'deming optimized residuals (deg C)') +
@@ -629,7 +630,7 @@ ggsave(paste0(dir, 'figures/optresid_insitudepth_colorbymonth_v28Jun2021.jpg'), 
 
 #### residuals by month, year, doy
 ```{r}
-ggplot(validation, aes (y = opt_resid, x = month)) +
+ggplot(validation_range, aes (y = opt_resid, x = month)) +
   geom_point() +
   labs(x = 'month',
        y = 'deming optimized residuals (deg C)') +
@@ -637,7 +638,7 @@ ggplot(validation, aes (y = opt_resid, x = month)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_month_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = month, color = pixel_count)) +
+ggplot(validation_range, aes (y = opt_resid, x = month, color = pixel_count)) +
   geom_point(size = 2) +
   labs(x = 'month',
        y = 'deming optimized residuals (deg C)') +
@@ -645,7 +646,7 @@ ggplot(validation, aes (y = opt_resid, x = month, color = pixel_count)) +
   final_theme 
 ggsave(paste0(dir, 'figures/optresid_month_bypixelcount_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = month, color = cloud_cover)) +
+ggplot(validation_range, aes (y = opt_resid, x = month, color = cloud_cover)) +
   geom_point(size = 2) +
   labs(x = 'month',
        y = 'deming optimized residuals (deg C)') +
@@ -653,7 +654,7 @@ ggplot(validation, aes (y = opt_resid, x = month, color = cloud_cover)) +
   final_theme 
 ggsave(paste0(dir, 'figures/optresid_month_bycloudcover_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = year)) +
+ggplot(validation_range, aes (y = opt_resid, x = year)) +
   geom_point() +
   labs(x = 'year',
        y = 'deming optimized residuals (deg C)') +
@@ -661,7 +662,7 @@ ggplot(validation, aes (y = opt_resid, x = year)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_year_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = year, color = pixel_count)) +
+ggplot(validation_range, aes (y = opt_resid, x = year, color = pixel_count)) +
   geom_point(size = 2) +
   labs(x = 'year',
        y = 'deming optimized residuals (deg C)') +
@@ -669,7 +670,7 @@ ggplot(validation, aes (y = opt_resid, x = year, color = pixel_count)) +
   final_theme 
 ggsave(paste0(dir, 'figures/optresid_year_bypixelcount_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = year, color = cloud_cover)) +
+ggplot(validation_range, aes (y = opt_resid, x = year, color = cloud_cover)) +
   geom_point(size = 2) +
   labs(x = 'year',
        y = 'deming optimized residuals (deg C)') +
@@ -677,7 +678,7 @@ ggplot(validation, aes (y = opt_resid, x = year, color = cloud_cover)) +
   final_theme 
 ggsave(paste0(dir, 'figures/optresid_year_bycloudcover_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = doy)) +
+ggplot(validation_range, aes (y = opt_resid, x = doy)) +
   geom_point() +
   labs(x = 'doy',
        y = 'deming optimized residuals (deg C)') +
@@ -685,7 +686,7 @@ ggplot(validation, aes (y = opt_resid, x = doy)) +
   final_theme
 ggsave(paste0(dir, 'figures/optresid_doy_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = doy, color = pixel_count)) +
+ggplot(validation_range, aes (y = opt_resid, x = doy, color = pixel_count)) +
   geom_point(size = 2) +
   labs(x = 'doy',
        y = 'deming optimized residuals (deg C)') +
@@ -693,7 +694,7 @@ ggplot(validation, aes (y = opt_resid, x = doy, color = pixel_count)) +
   final_theme 
 ggsave(paste0(dir, 'figures/optresid_doy_bypixelcount_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
 
-ggplot(validation, aes (y = opt_resid, x = doy, color = cloud_cover)) +
+ggplot(validation_range, aes (y = opt_resid, x = doy, color = cloud_cover)) +
   geom_point(size = 2) +
   labs(x = 'doy',
        y = 'deming optimized residuals (deg C)') +
@@ -704,28 +705,42 @@ ggsave(paste0(dir, 'figures/optresid_doy_bycloudcover_v28Jun2021.jpg'), height =
 
 ```
 
+#### residuals by sun angle and azimuth
+```{r}
+ggplot(validation_range, aes (y = opt_resid, x = azimuth)) +
+  geom_point() +
+  labs(x = 'azimuth (degrees)',
+       y = 'deming optimized residuals (deg C)') +
+  geom_hline(yintercept = 0, color = 'black') +
+  final_theme
+ggsave(paste0(dir, 'figures/optresid_azimuth_v28Jun2021.jpg'), height = 5, width = 8, units = 'in')
+
+
+```
+
+
 #### correlation between doy / pixel count / cloud cover
 
 Because there seems to be some functional dependency between these three, let's show the correlation of the 3 of them
 ```{r}
-cor_pixel_doy = round(cor(x = validation$pixel_count, y = validation$doy), digits = 2)
-pixel_doy <- ggplot(validation, aes(x = pixel_count, y = doy)) +
+cor_pixel_doy = round(cor(x = validation_range$pixel_count, y = validation_range$doy), digits = 2)
+pixel_doy <- ggplot(validation_range, aes(x = pixel_count, y = doy)) +
   geom_point() +
   annotate('text', label = paste0('r = ', cor_pixel_doy), y = 125, x = 8500) +
   labs(x = 'pixel count\ncontributing to mean LST', y='day of year') +
   final_theme+
   theme(plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), "cm"))
 
-cor_pixel_cloud = round(cor(x = validation$pixel_count, y = validation$cloud_cover), digits = 2)
-pixel_cloud <- ggplot(validation, aes(x = pixel_count, y = cloud_cover)) +
+cor_pixel_cloud = round(cor(x = validation_range$pixel_count, y = validation_range$cloud_cover), digits = 2)
+pixel_cloud <- ggplot(validation_range, aes(x = pixel_count, y = cloud_cover)) +
   geom_point() +
   annotate('text', label = paste0('r = ', cor_pixel_cloud), y = 0, x = 8500) +
   labs(x = 'pixel count\ncontributing to mean LST', y='percent cloud cover\nin Landsat image') +
   final_theme+
   theme(plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), "cm"))
 
-cor_doy_cloud = round(cor(x = validation$doy, y = validation$cloud_cover), digits = 2)
-doy_cloud <- ggplot(validation, aes(x = doy, y = cloud_cover)) +
+cor_doy_cloud = round(cor(x = validation_range$doy, y = validation_range$cloud_cover), digits = 2)
+doy_cloud <- ggplot(validation_range, aes(x = doy, y = cloud_cover)) +
   geom_point() +
   annotate('text', label = paste0('r = ', cor_doy_cloud), y = 0, x = 275) +
   labs(x = 'day of year\n', y='percent cloud cover\nin Landsat image') +
